ajout des fairthreads + ajout de la fonction sonore

--- a/PC2R_Serveur/CMakeLists.txt
+++ b/PC2R_Serveur/CMakeLists.txt
@@ -4,4 +4,4 @@ project(PC2R_Serveur)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 set(SOURCE_FILES src/main.c)
-add_executable(PC2R_Serveur ${SOURCE_FILES} include/serveur.h src/serveur.c include/client.h)
+add_executable(PC2R_Serveur ${SOURCE_FILES} include/serveur.h src/serveur.c include/client.h src/serveur.c include/traceinstantsf.h src/traceinstantsf.c)
